# humanitarian-extract-classificator

./: .gitignore  README.md  TransformerModel.py  dataset_creation.py  example_use.ipynb  example_use.py  inference.py  main.py  pyproject.toml  requirements.txt
humanitarian_extract_classificator/: __init__.py
humanitarian_extract_classificator/api_classification/: __init__.py  zero_shot_assessment_problems.py
humanitarian_extract_classificator/humbert_classification/: TransformerModel.py  __init__.py  dataset_creation.py  inference.py
src/api_classification/: zero_shot_assessment_problems.py  zero_shot_second_level.py
src/humbert_classification/: inference.py
